--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Facturación</title>
+    <title>FacturaciónEli</title>
     <link rel="stylesheet" href="proyecto.css">
 </head>
 <body>
